--- a/bookings-web/src/index.html
+++ b/bookings-web/src/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bookings Web</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Homemade+Apple&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
